// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Footer default state 1`] = `
<footer
  className="footer"
>
  <div
    className="ui center aligned container"
  >
    <img
      src="/cma.png"
      style={
        Object {
          "height": 40,
          "marginBottom": 25,
          "width": 40,
        }
      }
    />
    <div
      style={
        Object {
          "textTransform": "uppercase",
        }
      }
    >
      Montreal Chinese Alliance Church
    </div>
    <a
      href="https://www.google.ca/maps/place/13+Rue+Finchley,+Hampstead,+QC+H3X+2Z4/@45.4791032,-73.6348992,17z/data=!3m1!4b1!4m2!3m1!1s0x4cc917507e7efe21:0x334fc9316d4951e3"
    >
      13 Finchley, Hampstead, Québec H3X 2Z4
    </a>
     | 
    <a
      href="tel:5144822703"
    >
      514.482.2703
    </a>
    <br />
    <a
      href="http://montreal-cac.org/"
    >
      滿地可華人宣道會
    </a>
     | 
    <a
      href="http://mcac-m.blogspot.ca/"
    >
      教会网站
    </a>
     | 
    <a
      href="/login"
      onClick={[Function]}
    >
      Login
    </a>
    <br />
    <div
      style={
        Object {
          "fontStyle": "italic",
          "margin": "25px 0",
        }
      }
    >
      Because God loves us, we will love Jesus, love His people, and love the world, for Jesus' sake.
    </div>
  </div>
</footer>
`;

exports[`Storyshots NavBar default state 1`] = `
<div
  className="ui secondary menu"
>
  <div
    className="item"
    onClick={[Function]}
  >
    <img
      src="/cma.png"
      style={
        Object {
          "height": 40,
          "width": 40,
        }
      }
    />
  </div>
  <div
    className="right menu"
  >
    <a
      className="item"
      onClick={[Function]}
    >
      Connect
    </a>
    <a
      className="item"
      onClick={[Function]}
    >
      Sermons
    </a>
    <a
      className="item"
      onClick={[Function]}
    >
      About
    </a>
    <a
      className="item"
      onClick={[Function]}
    >
      Sunday
    </a>
  </div>
</div>
`;

exports[`Storyshots Series with 1 sermon 1`] = `
<div
  className="item"
>
  <div
    className="content"
  >
    <img
      className="ui small bordered rounded image"
      src="https://via.placeholder.com/300x300"
    />
    <strong
      className="header"
    >
      My Series
    </strong>
    <div
      className="meta"
    >
      1 sermon
    </div>
  </div>
</div>
`;

exports[`Storyshots Series with 4 sermons 1`] = `
<div
  className="item"
>
  <div
    className="content"
  >
    <img
      className="ui small bordered rounded image"
      src="https://via.placeholder.com/300x300"
    />
    <strong
      className="header"
    >
      My Series
    </strong>
    <div
      className="meta"
    >
      4 sermons
    </div>
  </div>
</div>
`;

exports[`Storyshots Series with no sermons 1`] = `
<div
  className="item"
>
  <div
    className="content"
  >
    <img
      className="ui small bordered rounded image"
      src="https://via.placeholder.com/300x300"
    />
    <strong
      className="header"
    >
      My Series
    </strong>
    <div
      className="meta"
    >
      0 sermons
    </div>
  </div>
</div>
`;

exports[`Storyshots SeriesList with multiple series 1`] = `
<div
  className="ui doubling four column grid"
>
  <div
    className="item"
  >
    <div
      className="content"
    >
      <img
        className="ui small bordered rounded image"
        src="https://via.placeholder.com/300x300"
      />
      <strong
        className="header"
      >
        My Series 1
      </strong>
      <div
        className="meta"
      >
        0 sermons
      </div>
    </div>
  </div>
  <div
    className="item"
  >
    <div
      className="content"
    >
      <img
        className="ui small bordered rounded image"
        src="https://via.placeholder.com/300x300"
      />
      <strong
        className="header"
      >
        My Series 2
      </strong>
      <div
        className="meta"
      >
        1 sermon
      </div>
    </div>
  </div>
  <div
    className="item"
  >
    <div
      className="content"
    >
      <img
        className="ui small bordered rounded image"
        src="https://via.placeholder.com/300x300"
      />
      <strong
        className="header"
      >
        My Series 3
      </strong>
      <div
        className="meta"
      >
        2 sermons
      </div>
    </div>
  </div>
  <div
    className="item"
  >
    <div
      className="content"
    >
      <img
        className="ui small bordered rounded image"
        src="https://via.placeholder.com/300x300"
      />
      <strong
        className="header"
      >
        My Series 1
      </strong>
      <div
        className="meta"
      >
        0 sermons
      </div>
    </div>
  </div>
  <div
    className="item"
  >
    <div
      className="content"
    >
      <img
        className="ui small bordered rounded image"
        src="https://via.placeholder.com/300x300"
      />
      <strong
        className="header"
      >
        My Series 2
      </strong>
      <div
        className="meta"
      >
        1 sermon
      </div>
    </div>
  </div>
  <div
    className="item"
  >
    <div
      className="content"
    >
      <img
        className="ui small bordered rounded image"
        src="https://via.placeholder.com/300x300"
      />
      <strong
        className="header"
      >
        My Series 3
      </strong>
      <div
        className="meta"
      >
        2 sermons
      </div>
    </div>
  </div>
  <div
    className="item"
  >
    <div
      className="content"
    >
      <img
        className="ui small bordered rounded image"
        src="https://via.placeholder.com/300x300"
      />
      <strong
        className="header"
      >
        My Series 1
      </strong>
      <div
        className="meta"
      >
        0 sermons
      </div>
    </div>
  </div>
  <div
    className="item"
  >
    <div
      className="content"
    >
      <img
        className="ui small bordered rounded image"
        src="https://via.placeholder.com/300x300"
      />
      <strong
        className="header"
      >
        My Series 2
      </strong>
      <div
        className="meta"
      >
        1 sermon
      </div>
    </div>
  </div>
  <div
    className="item"
  >
    <div
      className="content"
    >
      <img
        className="ui small bordered rounded image"
        src="https://via.placeholder.com/300x300"
      />
      <strong
        className="header"
      >
        My Series 3
      </strong>
      <div
        className="meta"
      >
        2 sermons
      </div>
    </div>
  </div>
  <div
    className="item"
  >
    <div
      className="content"
    >
      <img
        className="ui small bordered rounded image"
        src="https://via.placeholder.com/300x300"
      />
      <strong
        className="header"
      >
        My Series 1
      </strong>
      <div
        className="meta"
      >
        0 sermons
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SeriesList with no series 1`] = `
<div>
  There are currently no series available.
</div>
`;

exports[`Storyshots Sermons default state 1`] = `
<div>
  <div
    className="sermons-header"
    style={
      Object {
        "backgroundImage": "url(/sermons.jpg)",
        "backgroundSize": "cover",
      }
    }
  >
    <div
      className="ui container"
    >
      <div
        className="ui secondary menu"
      >
        <div
          className="item"
          onClick={[Function]}
        >
          <img
            src="/cma.png"
            style={
              Object {
                "height": 40,
                "width": 40,
              }
            }
          />
        </div>
        <div
          className="right menu"
        >
          <a
            className="item"
            onClick={[Function]}
          >
            Connect
          </a>
          <a
            className="item"
            onClick={[Function]}
          >
            Sermons
          </a>
          <a
            className="item"
            onClick={[Function]}
          >
            About
          </a>
          <a
            className="item"
            onClick={[Function]}
          >
            Sunday
          </a>
        </div>
      </div>
      <p>
        <strong>
          Sermons
        </strong>
         — Every Sunday we get together to read God’s Word (the Bible) and to talk about how what Jesus has done radically transforms our lives and our world.
      </p>
    </div>
  </div>
  <div
    className="ui text container"
    style={
      Object {
        "margin": "50px 0",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "50px 0",
        }
      }
    >
      <div
        className="ui tiny header"
      >
        Sermon Series Archive
      </div>
      <div
        className="ui divider"
      />
    </div>
    <div
      className="ui doubling four column grid"
    >
      <div
        className="item"
      >
        <div
          className="content"
        >
          <img
            className="ui small bordered rounded image"
            src="https://via.placeholder.com/300x300"
          />
          <strong
            className="header"
          >
            My Series 1
          </strong>
          <div
            className="meta"
          >
            0 sermons
          </div>
        </div>
      </div>
      <div
        className="item"
      >
        <div
          className="content"
        >
          <img
            className="ui small bordered rounded image"
            src="https://via.placeholder.com/300x300"
          />
          <strong
            className="header"
          >
            My Series 2
          </strong>
          <div
            className="meta"
          >
            1 sermon
          </div>
        </div>
      </div>
      <div
        className="item"
      >
        <div
          className="content"
        >
          <img
            className="ui small bordered rounded image"
            src="https://via.placeholder.com/300x300"
          />
          <strong
            className="header"
          >
            My Series 3
          </strong>
          <div
            className="meta"
          >
            2 sermons
          </div>
        </div>
      </div>
      <div
        className="item"
      >
        <div
          className="content"
        >
          <img
            className="ui small bordered rounded image"
            src="https://via.placeholder.com/300x300"
          />
          <strong
            className="header"
          >
            My Series 1
          </strong>
          <div
            className="meta"
          >
            0 sermons
          </div>
        </div>
      </div>
      <div
        className="item"
      >
        <div
          className="content"
        >
          <img
            className="ui small bordered rounded image"
            src="https://via.placeholder.com/300x300"
          />
          <strong
            className="header"
          >
            My Series 2
          </strong>
          <div
            className="meta"
          >
            1 sermon
          </div>
        </div>
      </div>
      <div
        className="item"
      >
        <div
          className="content"
        >
          <img
            className="ui small bordered rounded image"
            src="https://via.placeholder.com/300x300"
          />
          <strong
            className="header"
          >
            My Series 3
          </strong>
          <div
            className="meta"
          >
            2 sermons
          </div>
        </div>
      </div>
      <div
        className="item"
      >
        <div
          className="content"
        >
          <img
            className="ui small bordered rounded image"
            src="https://via.placeholder.com/300x300"
          />
          <strong
            className="header"
          >
            My Series 1
          </strong>
          <div
            className="meta"
          >
            0 sermons
          </div>
        </div>
      </div>
      <div
        className="item"
      >
        <div
          className="content"
        >
          <img
            className="ui small bordered rounded image"
            src="https://via.placeholder.com/300x300"
          />
          <strong
            className="header"
          >
            My Series 2
          </strong>
          <div
            className="meta"
          >
            1 sermon
          </div>
        </div>
      </div>
      <div
        className="item"
      >
        <div
          className="content"
        >
          <img
            className="ui small bordered rounded image"
            src="https://via.placeholder.com/300x300"
          />
          <strong
            className="header"
          >
            My Series 3
          </strong>
          <div
            className="meta"
          >
            2 sermons
          </div>
        </div>
      </div>
      <div
        className="item"
      >
        <div
          className="content"
        >
          <img
            className="ui small bordered rounded image"
            src="https://via.placeholder.com/300x300"
          />
          <strong
            className="header"
          >
            My Series 1
          </strong>
          <div
            className="meta"
          >
            0 sermons
          </div>
        </div>
      </div>
    </div>
  </div>
  <footer
    className="footer"
  >
    <div
      className="ui center aligned container"
    >
      <img
        src="/cma.png"
        style={
          Object {
            "height": 40,
            "marginBottom": 25,
            "width": 40,
          }
        }
      />
      <div
        style={
          Object {
            "textTransform": "uppercase",
          }
        }
      >
        Montreal Chinese Alliance Church
      </div>
      <a
        href="https://www.google.ca/maps/place/13+Rue+Finchley,+Hampstead,+QC+H3X+2Z4/@45.4791032,-73.6348992,17z/data=!3m1!4b1!4m2!3m1!1s0x4cc917507e7efe21:0x334fc9316d4951e3"
      >
        13 Finchley, Hampstead, Québec H3X 2Z4
      </a>
       | 
      <a
        href="tel:5144822703"
      >
        514.482.2703
      </a>
      <br />
      <a
        href="http://montreal-cac.org/"
      >
        滿地可華人宣道會
      </a>
       | 
      <a
        href="http://mcac-m.blogspot.ca/"
      >
        教会网站
      </a>
       | 
      <a
        href="/login"
        onClick={[Function]}
      >
        Login
      </a>
      <br />
      <div
        style={
          Object {
            "fontStyle": "italic",
            "margin": "25px 0",
          }
        }
      >
        Because God loves us, we will love Jesus, love His people, and love the world, for Jesus' sake.
      </div>
    </div>
  </footer>
</div>
`;

exports[`Storyshots SermonsHeader default state 1`] = `
<div
  className="sermons-header"
  style={
    Object {
      "backgroundImage": "url(/sermons.jpg)",
      "backgroundSize": "cover",
    }
  }
>
  <div
    className="ui container"
  >
    <div
      className="ui secondary menu"
    >
      <div
        className="item"
        onClick={[Function]}
      >
        <img
          src="/cma.png"
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        />
      </div>
      <div
        className="right menu"
      >
        <a
          className="item"
          onClick={[Function]}
        >
          Connect
        </a>
        <a
          className="item"
          onClick={[Function]}
        >
          Sermons
        </a>
        <a
          className="item"
          onClick={[Function]}
        >
          About
        </a>
        <a
          className="item"
          onClick={[Function]}
        >
          Sunday
        </a>
      </div>
    </div>
    <p>
      <strong>
        Sermons
      </strong>
       — Every Sunday we get together to read God’s Word (the Bible) and to talk about how what Jesus has done radically transforms our lives and our world.
    </p>
  </div>
</div>
`;
